--- a/app/views/sections/footer.html
+++ b/app/views/sections/footer.html
@@ -8,7 +8,8 @@
 				<ul class="list-inline list-inline-dots mb-0">
 					<li class="list-inline-item">
 						Copyright &copy; 2022
-						<a href="." class="link-secondary">Warkop Warawiri</a>.
+						<a href="https://github.com/warkopwarawiri-id" target="_blank" class="link-secondary">Warkop
+							Warawiri</a>.
 					</li>
 					<li class="list-inline-item">
 						<a href="." class="link-secondary" rel="noopener">v1.0.0</a>
